--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <br>
                         <textarea name="experiencia" id="experiencia" cols="30" rows="10">
                         </textarea>
-                        <button type="submit">Concluído</button>
+                        <button class="format" type="submit">Enviar</button>
                     </div>
 
     </form>
